Добавлен репозиторий статистики, добавлен вывод статистики в графическом представлении chartjs,

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,12 +7,12 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Kestrel": {
-    "EndPoints": {
-      "Http": {
-        "Url": "http://localhost:5000"
-      }
-    }
-  }
+  "AllowedHosts": "*"
+  //"Kestrel": {
+  //  "EndPoints": {
+  //    "Https": {
+  //      "Url": "http://localhost:5000"
+  //    }
+  //  }
+  //}
 }
