--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=webappdbinstance.c8twcjuhuc5j.eu-central-1.rds.amazonaws.com;database=transportCompanyDb;user=Zappa;password=#e2BSsVk"
+    "DefaultConnection": "server=;database=transportCompanyDb;user=Zapa;password="
   },
   "Logging": {
     "LogLevel": {
